--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css//index.css" />
   </head>
   <body>
-    <div class="container">
+    <div class="heder">
       <form class="search-form" id="search-form">
         <input
           type="text"
@@ -18,9 +18,9 @@
         />
         <button type="submit">Search</button>
       </form>
-      <div class="gallery"></div>
-      <button type="button" class="load-more visually-hidden">Load more</button>
     </div>
+    <div class="gallery"></div>
+    <button type="button" class="load-more visually-hidden">Load more</button>
   </body>
   <script type="module" src="./index.js"></script>
 </html>
